atualiza símbolos e abreviaturas

--- a/src/Cap00/Simbolos.tex
+++ b/src/Cap00/Simbolos.tex
@@ -1,7 +1,23 @@
 \chapter*{Lista de Símbolos}
 
 \begin{description}
-    % FIXME Remover os dois símbolos abaixo e incluir as que serão
-    % utilizadas.
-    \item[$\mathbb{R}$] \quad Conjunto dos números reais.
+    \item[$\mathbb{R}^3$] \quad Espaço tridimensional real.
+    \item[$SO(3)$] \quad Grupo especial ortogonal de ordem 3.
+    \item[$SE(3)$] \quad Grupo especial euclidiano de ordem 3.
+    \item[$q$] \quad Vetor de configuração das juntas.
+    \item[$\dot{q}$] \quad Vetor de velocidades das juntas.
+    \item[$\dot{q_0}$] \quad Vetor arbitrário de velocidades das juntas.
+    \item[$q_{iM}$] \quad Limite superior de operação da junta.
+    \item[$q_{im}$] \quad Limite inferior de operação da junta.
+    \item[$\bar{q_{i}}$] \quad Valor médio de operação da junta.
+    \item[$A_i(q_i)$] \quad Matriz de transformação homogênea associada ao elo $i$.
+    \item[$T^0_n$] \quad Matriz de transformação homogênea da cinemática direta.
+    \item[$J$] \quad Matriz jacobiana.
+    \item[$J^\dag$] \quad Pseudo-inversa da matriz jacobiana.
+    \item[$\xi$] \quad Velocidade do efetuador final.
+    \item[$\mu$] \quad Medida de manipulabilidade.
+    \item[$w$] \quad Índice de performance.
+    \item[$I(w)$] \quad Pontuação da métrica de desempenho.
+    \item[$E_0$] \quad Posição inicial do efetuador.
+    \item[$E_f$] \quad Posição final do efetuador.
 \end{description}
