--- a/src/Cap04/Capitulo4.tex
+++ b/src/Cap04/Capitulo4.tex
@@ -2,7 +2,7 @@
 
 Este capítulo apresenta os resultados obtidos a partir da simulação da 
 execução de trajetórias cartesianas para o manipulador 5R utilizando o esquema 
-de controle RRC. Em cada cenário, foi realizado um conjunto de 4 execuções de 
+de controle RRMC. Em cada cenário, foi realizado um conjunto de 4 execuções de 
 uma mesma trajetória variando-se o ganho \(k_0\), com o objetivo de avaliar 
 a eficácia do controlador em otimizar os índices de desempenho fornecidos, submetido 
 a diferentes restrições cinemáticas.
