--- a/src/Cap00/Abreviaturas.tex
+++ b/src/Cap00/Abreviaturas.tex
@@ -1,5 +1,14 @@
 \chapter*{Lista de Abreviaturas}
 
 \begin{description}
+  \item[UFAL] \quad Universidade Federal de Alagoas.
   \item[IC] \quad Instituto de Computação.
+  \item[DH] \quad Denavit-Hartenberg.
+  \item[RRMC] \quad \emph{Resolved Rate Motion Control}.
+  \item[SVD] \quad \emph{Singular Value Decomposition}.
+  \item[ROS] \quad \emph{Robot Operating System}.
+  \item[RTB] \quad \emph{Robotics Toolbox for Python}.
+  % \item[PID] \quad Controlador Proporcional-Integral-Derivativo.
+  \item[RViz] \quad \emph{ROS Visualization} (ferramenta de visualização do ROS).
+  \item[PLA] \quad Ácido Polilático.
 \end{description}
