--- a/src/Cap00/Abreviaturas.tex
+++ b/src/Cap00/Abreviaturas.tex
@@ -1,6 +1,7 @@
 \chapter*{Lista de Abreviaturas}
 
 \begin{description}
+  \item[UFRN] \quad Universidade Federal do Rio Grande do Norte.
   \item[UFAL] \quad Universidade Federal de Alagoas.
   \item[IC] \quad Instituto de Computação.
   \item[DH] \quad Denavit-Hartenberg.
