--- a/src/Cap00/Abstract.tex
+++ b/src/Cap00/Abstract.tex
@@ -1,5 +1,16 @@
 \chapter*{Abstract}
-\noindent \lipsum[2]
+\noindent Kinematically redundant manipulators have more degrees of freedom (DOFs) than necessary to perform a specific task,
+ offering greater flexibility and dexterity in executing trajectories. However, these additional DOFs also introduce increased
+  complexity in the manipulator's inverse kinematics, necessitating redundancy resolution schemes to find a particular solution 
+  that optimizes performance criteria such as joint speed, manipulability, or distance to obstacles. In this work, we present a 
+  theoretical foundation on the key aspects of differential inverse kinematics for redundant manipulators. Subsequently, we 
+  implemented a simulated environment using the Webots simulator and the Robot Operating System (ROS), allowing practical 
+  application of the \emph{Resolved Rate Motion Control} (RRMC) scheme. Our experiments demonstrated that the controller can 
+  optimize performance metrics without violating primary kinematic constraints in different scenarios of Cartesian trajectory execution.
 
-\vspace{5mm}
-\noindent\textbf{\textit{Keywords}:~\textit{KW$_1$};~\textit{KW$_2$};~\textit{KW$_3$};~\textit{KW$_4$};~\textit{KW$_5$}.}
+  \vspace{5mm}
+
+\noindent\textbf{
+    \textit{Keywords}:~\textit{robotic manipulators};~\textit{differential inverse kinematics};
+    ~\textit{redundancy resolution};~\textit{robotics simulation};~\textit{resolved rate motion control}.
+}
