--- a/src/Cap02/Capitulo2.tex
+++ b/src/Cap02/Capitulo2.tex
@@ -535,7 +535,7 @@ um de otimização linear com restrições, onde a solução ótima é obtida mi
 o custo quadrático das velocidades das juntas:
 
 \begin{equation}
-    \min_{\dot{q}} \left\Vert \dot{q} - \dot{q_0} \right\Vert^2 \text{ sujeito a } J \dot{q} = \xi
+    \argmin_{\dot{q}} \left\Vert \dot{q} - \dot{q_0} \right\Vert^2 \text{ sujeito a } J \dot{q} = \xi
 \end{equation}
 
 onde \(\dot{q_0}\) é um vetor de velocidades arbitrário. Pode ser mostrado que nesse caso, 
