--- a/src/Identificacao.tex
+++ b/src/Identificacao.tex
@@ -11,13 +11,13 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
 \orientador{Glauber Rodrigues Leite} %% Nome 
-\tituloOrientador{Prof.\ Dr., UFAL} %% Titulo, Instituição
+\tituloOrientador{Prof.\ Dr., UFRN} %% Titulo, Instituição
 
 \coorientador{} %% Nome
 \tituloCoorientador{} %% Título, Instituição
 
 \memberA{Ícaro Bezerra Queiroz de Araújo} %% Nome
-\filiationA{Prof.\ Dr., UFAL} %% Titulo, Instituição
+\filiationA{Prof.\ Dr., UFRN} %% Titulo, Instituição
 
 \memberB{Arthur Costa Vangasse} %% Nome
 \filiationB{Msc., UFMG} %% Titulo, Instituição
@@ -34,7 +34,7 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
-\setDate{23}
+\setDate{26}
 \setMonth{Julho}
 \setYear{2024}
 \setLocation{Maceió, Alagoas}
