--- a/src/main.tex
+++ b/src/main.tex
@@ -2,12 +2,15 @@
 
 \usepackage{amsmath,amsfonts,mathdots,amssymb}
 \usepackage{graphicx}
+\usepackage{subcaption}
 \usepackage{lipsum}
 \usepackage{indentfirst}
 \usepackage{makecell}
 \usepackage{booktabs}
 \usepackage{algpseudocode, algorithm}
 \usepackage{hyperref}
+
+\DeclareMathOperator*{\argmin}{arg\,min}
 
 \floatname{algorithm}{Algoritmo}
 
@@ -29,7 +32,7 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % %
 % Opcionais % % % % % % % % % % % % % % % % % % % % %
 % % % % % % % % % % % % % % % % % % % % % % % % % % %
-\dedicatoria{} % opcional
+% \dedicatoria{} % opcional
 \agradecimentos{} % opcional
 \epigrafe{} % opcional
 
