--- a/src/Cap00/Resumo.tex
+++ b/src/Cap00/Resumo.tex
@@ -1,5 +1,17 @@
 \chapter*{Resumo}
-\noindent \lipsum[2]
+\noindent Manipuladores cinematicamente redundantes possuem mais graus de liberdade (DOFs) do 
+que o necessário para realizar uma tarefa específica, oferecendo maior flexibilidade e destreza na execução de trajetórias. 
+No entanto, esses DOFs adicionais também introduzem uma maior complexidade na cinemática inversa do manipulador, sendo necessário 
+recorrer a esquemas de resolução de redundância, para encontrar uma solução particular otimizando critérios de desempenho do manipulador,
+como velocidade das juntas, manipulabilidade ou distância para obstáculos. Neste trabalho, apresentamos uma fundamentação teórica sobre 
+os principais pontos relativos a cinemática inversa diferencial voltada para manipuladores redundantes. Em seguida, implementamos
+um ambiente simulado utilizando o simulador Webots e o Sistema Operacional de Robôs (ROS), permitindo a aplicação prática do 
+esquema de controle \emph{Resolved Rate Motion Control} (RRMC). Nossos experimentos mostraram que o controlador é capaz de otimizar
+métricas de desempenho, sem violar as restrições cinemáticas primárias em diferentes cenários de execução de trajetórias cartesianas.
 
 \vspace{5mm}
-\noindent\textbf{\textit{Palavras-chave}:~\textit{KW$_1$};~\textit{KW$_2$};~\textit{KW$_3$};~\textit{KW$_4$};~\textit{KW$_5$}.}
+
+\noindent\textbf{
+    \textit{Palavras-chave}:~\textit{manipuladores robóticos};~\textit{cinemática inversa diferencial};
+    ~\textit{resolução de redundância};~\textit{simulação de robótica};~\textit{resolved rate motion control}.
+}
