--- a/src/Cap03/Capitulo3.tex
+++ b/src/Cap03/Capitulo3.tex
@@ -243,9 +243,9 @@ equação~\ref{eq:pseudo-inverse}.
     \caption{Diagrama de blocos do controlador RRMC}\label{fig:block-diagram}
 \end{figure}
 
-Para a realização dos experimentos, foi implementado o algoritmo~\ref{rrc-alg}
-(código disponível em \url{https://github.com/hugotallys/snakesim}) que escolhe o vetor \(\dot{q_0}\) de acordo com o gradiente dado pela
-equação~\ref{eq:metric-gradient}. As duas métricas apresentadas anteriormente
+Para a realização dos experimentos, foi implementado~\footnote{código disponível em 
+\url{https://github.com/hugotallys/snakesim}}  o algoritmo~\ref{rrc-alg} que escolhe o vetor \(\dot{q_0}\)
+ de acordo com o gradiente dado pela equação~\ref{eq:metric-gradient}. As duas métricas apresentadas anteriormente
 foram calculadas: \emph{distância para os limites mecânicos das juntas} e
 \emph{medida de manipulabilidade de Yoshikawa}. No primeiro caso, o gradiente é
 calculado analiticamente de acordo com a equação~\ref{eq:joint-distance-grad}.
@@ -285,10 +285,10 @@ diferenças finitas, considerando um passo \(h\) suficientemente pequeno.
 Os experimentos focaram na avaliação da resolução de redundância
 sob valores variados do ganho (\(k_0\)) e envolveram dois cenários. No primeiro
 cenário, o manipulador foi controlado de modo a otimizar a distância para o limite mecânico das juntas, 
-executando movimentos internos no seu espaço nulo, mantendo a posição do efetuador final \(E_0\) estacionária.
+executando movimentos internos no seu espaço nulo, mantendo a posição do efetuador final estacionária.
 No segundo cenário, além de movimentos internos para otimizar seu índice de manipulabilidade, o manipulador 
-seguiu uma trajetória cartesiana entre a posição atual \(E_0\) e um outro ponto no seu espaço 
-de trabalho \(E_f\). Os índices de desempenho, configuração das juntas e a 
+seguiu uma trajetória cartesiana entre a posição inicial \(E_0\) e um outro ponto \(E_f\) no seu espaço 
+de trabalho. Os índices de desempenho, configuração das juntas e a 
 posição do efetuador final foram registrados na simulação de modo a se avaliar 
 a eficácia do esquema da resolução de redundância na execução de tais experimentos.
 
