corrige titulo orientador

--- a/src/Identificacao.tex
+++ b/src/Identificacao.tex
@@ -11,13 +11,13 @@
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % %
 
 \orientador{Glauber Rodrigues Leite} %% Nome 
-\tituloOrientador{Prof.\ Dr., UFRN} %% Titulo, Instituição
+\tituloOrientador{Prof.\ Dr.} %% Titulo, Instituição
 
 \coorientador{} %% Nome
 \tituloCoorientador{} %% Título, Instituição
 
 \memberA{Ícaro Bezerra Queiroz de Araújo} %% Nome
-\filiationA{Prof.\ Dr., UFRN} %% Titulo, Instituição
+\filiationA{Prof.\ Dr., UFAL} %% Titulo, Instituição
 
 \memberB{Arthur Costa Vangasse} %% Nome
 \filiationB{Msc., UFMG} %% Titulo, Instituição
