--- a/src/Identificacao.tex
+++ b/src/Identificacao.tex
@@ -19,7 +19,7 @@
 \memberA{Ícaro Bezerra Queiroz de Araújo} %% Nome
 \filiationA{Prof.\ Dr., UFAL} %% Titulo, Instituição
 
-\memberB{Arthur Costa Vangasse} %% Nome
+\memberB{Arthur da Costa Vangasse} %% Nome
 \filiationB{Msc., UFMG} %% Titulo, Instituição
 
 \memberC{} %% Nome
